# MetaProcess

./: CMakeLists.txt  README.md  mainwindow.ui
MetaProcess/src/: MetaProcess.pro  MetaProcess.pro.autosave  MetaProcess.pro.user.e4ecf43  analysisdf.cpp  analysisdf.cpp.autosave  analysisdf.h  brent.hpp  completewiz.h  dataframe.cpp  dataframe.h  imputationpage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multitestresult.h  multivardial.cpp  multivardial.h  mytabview.cpp  mytabview.h  noisefillpage.cpp  noisefillpage.h  normpage.cpp  normpage.h  npq.h  peakfilterpage.h  printtwosampletest.cpp  printtwosampletest.h  processdf.cpp  processdf.h  qassurancepage.cpp  qassurancepage.h  scalpage.cpp  scalpage.h  t_funcs.h  tabselmodel.cpp  tabselmodel.h  transfpage.cpp  transfpage.h  ttestdial.cpp  (+3 more)
include/: analysisdf.h  analysisresult.h  datasetmodel.h  imputationpage.h  mainwindow.h  multitestresult.h  normpage.h  viewmodel.h  wilcox_funcs.h  xmlhandler.h
src/: analysisdf.cpp  completewiz.cpp  datasetmodel.cpp  mainwindow.cpp  peakfilterpage.cpp  tabselmodel.cpp  xmlhandler.cpp
